--- a/src/index.template.html
+++ b/src/index.template.html
@@ -4,6 +4,7 @@
     <title><%= productName %></title>
 
     <meta charset="utf-8">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="description" content="<%= productDescription %>">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
